--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
       <a href="{% url 'community:index'%}" type='btn' class='btn btn-dark'>Community</a>
       <a href="{% url 'community:create'%}" type='btn' class='btn btn-dark'>New Review</a>
       <a href="{% url 'movies:recommended'%}" type='btn' class='btn btn-dark'>Recommend</a>
+      <a href="{% url 'movies:recoreco'%}" type='btn' class='btn btn-dark'>Recommend2</a>
+
       {% else %}
       <p></p>
       <a href="{% url 'accounts:signup' %}" type='btn' class='btn btn-dark'>Signup</a>
