--- a/movies/templates/movies/recoreco.html
+++ b/movies/templates/movies/recoreco.html
@@ -3,24 +3,38 @@
 {% block content %}
 <h1>추천영화</h1>
 
-{% comment %} <label for="name">Name (4 to 8 characters):</label>
-
-<input type="text" id="name" name="name" required
-       minlength="4" maxlength="8" size="10"> {% endcomment %}
-
- <form action="{% url 'community:create' %}" method="POST">    
-{% csrf_token %}
-        <input type="text" id="search" name="search" Placeholder="hi" value="ah"> 
+ <form action="{% url 'movies:result' %}" method="GET">    
+ {% comment %} get으로해볼까 {% endcomment %}
+{% comment %} {% csrf_token %} {% endcomment %}
+        <input size="30" type="text" id="search" name="search" Placeholder="다시넣어주세용" value="보고싶은 장르를 넣어주세용" > 
        {% comment %} <input type="submit" value="작성"> {% endcomment %}
        <button type="submit" id="button">버튼</button>
 
   </form>
 
-        <button type="button" id="button2">버튼</button>
+        <button type="button" id="button2">초기화</button>
+        <ul>
+        <li class="movie">모험</li>
+        <li class="movie">판타지</li>
+        <li class="movie">애니메이션</li>
+        <li class="movie">드라마</li>
+        <li class="movie">공포</li>
+        <li class="movie">액션</li>
+        <li class="movie">코미디</li>
+        <li class="movie">역사</li>
+        <li class="movie">서부</li>
+        <li class="movie">스릴러</li>
+        <li class="movie">범죄</li>
+        <li class="movie">다큐멘터리</li>
+        <li class="movie">SF</li>
+        <li class="movie">미스터리</li>
+        <li class="movie">음악</li>
+        <li class="movie">로맨스</li>
+        <li class="movie">가족</li>
+        <li class="movie">전쟁</li>
+        <li class="movie">TV 영화</li>
+        </ul>
 
-
-        <input placeholder="Enter some text" name="name"/>
-       <p id="values"></p>
 
   
 
@@ -28,35 +42,25 @@
 
 {% comment %} alert('hello') {% endcomment %}
 const search = document.querySelector('#search')
-const btn = document.querySelector('#button')
 const btn2 = document.querySelector('#button2')
-const genre = "액션"
-btn.addEventListener('click', function (event) {
-    alert('버튼이 클릭되었습니다.')
-    console.log(event)
-    console.log(genre)
-    // console.log('버튼이 눌렸다!!')
+let arr = ''
+const genre = document.querySelectorAll('.movie').forEach(item =>{
+  item.addEventListener('click', event => {
+    //console.log('hi')
+    //console.log(item.innerText)
+    arr+=item.innerText+','
+    //arr+=item.innerText
+    console.log(arr)
+    search.value=arr
   })
+})
+
+
 btn2.addEventListener('click', function (event) {
-       search.value="hhhhhhh"
-    //search.placeholder="hihi"
-    //search.innerText="hhh"
-    //search.textContent="whwhwh"
-    // let value = '' 이런식으로 문자배열 늘려나가서 추가해주지머
-    // placeholder 소문자로해야함
-    console.log(genre)
+       search.value=""
+       arr=''
   })
 
-
-  /////////////////
-  const input = document.querySelector('input');
-const log = document.getElementById('values');
-
-input.addEventListener('input', updateValue);
-
-function updateValue(e) {
-  log.textContent = e.target.value;
-}
 
 </script>
 {% endblock %}
