--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -4,7 +4,7 @@
   <h1>{{ person.username }}의 프로필 페이지</h1>
   {% with followings=person.followings.all followers=person.followers.all %}
     <div id="follow-count">
-      <div>팔로잉 수 : {{ followings|length }} / 팔로워 수 : {{ followers|length }}</div>
+      <div class='fs-4'>팔로잉 수 : {{ followings|length }} / 팔로워 수 : {{ followers|length }}</div>
     </div>
     {% if user != person %}
       <div>
@@ -19,9 +19,33 @@
       </div>
     {% endif %}
   {% endwith %}
+  <br>
 
+  <h3>{{ person.username }}가 찜한 영화</h3>
+  {% for movie in person.like_movies.all %}
+    <li>
+      <div class='fs-5 d-inline'>{{ movie.title }}</div>
+      <a href="{% url 'movies:detail' movie.pk %}" type='btn' class='btn btn-light d-inline'>detail</a>    
+    </li>
+  {% endfor %}
+  <br>
+
+  <h3>{{ person.username }}'s 게시글</h3>
+  <ul>
+    {% for review in person.review_set.all %}
+    <li>
+      <div class='fs-5 d-inline'>제목 : {{ review.title }}</div>
+      <a href="{% url 'community:detail' review.pk %}" type='btn' class='btn btn-secondary d-inline'>바로가기</a>
+    </li>
+    {% endfor %}
+  </ul>
+  <br>
+
+  <h3>{{ person.username }}'s 댓글</h3>
+  {% for comment in person.comment_set.all %}
+    <div>{{ comment.content }}</div>
+  {% endfor %}
   <hr>
-
   
 {% endblock content %}
 
