--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -15,5 +15,102 @@
     {% endfor %}
   </div>
   
+  <form class="like-form" data-movie-id="{{ movie.pk }}">
+    {% csrf_token %}
+    {% if user in movie.like_users.all %}
+        <button id="like-button-{{ movie.pk }}" class='btn btn-secondary'>찜 목록에서 삭제</button>
+      {% else %}
+        <button id="like-button-{{ movie.pk }}" class='btn btn-primary'>찜 목록에 추가</button>
+      {% endif %}
+  </form>
+  
+  <hr>
+  <h4>댓글 목록</h4>
+  {% if comments %}
+    <p><b>{{ comments|length }}개의 댓글이 있습니다.</b></p>
+  {% endif %}
+  <ul>
+    {% for comment in comments %}
+      <li>
+        {{ comment.user }} - {{ comment.content }}
+        {% if user == comment.user %}
+          <form action="{% url 'movies:comments_delete' movie.pk comment.pk %}" method="POST" class="d-inline">
+            {% csrf_token %}
+            <input type="submit" value="DELETE">
+          </form>
+        {% endif %}
+      </li>
+    {% empty %}
+      <p>댓글이 없어요..</p>
+    {% endfor %}
+  </ul>
+
+  <hr>
+  {% if request.user.is_authenticated %}
+    {% comment %} <form class="comment-form" data-movie-id="{{ movie.pk }}"> {% endcomment %}
+    <form action="{% url 'movies:comments_create' movie.pk %}" method="POST">
+      {% csrf_token %}
+      {{ comment_form }}
+      <input type="submit" id="comment-submit-{{ movie.pk }}">
+    </form>
+  {% else %}
+    <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인하세요.]</a>
+  {% endif %}
   
 {% endblock %}
+
+<script>
+  // 좋아요 기능
+  const forms = document.querySelectorAll('.like-form')
+  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+
+  forms.forEach(form => {
+    form.addEventListener('submit', function (event) {
+      event.preventDefault()
+      const movieId = event.target.dataset.movieId
+      console.log(movieId)
+      axios({
+        method: 'post',
+        url: `http://127.0.0.1:8000/movies/${movieId}/like/`,
+        headers: {'X-CSRFToken': csrftoken},
+      })
+        .then(response => {
+          // console.log(response.data)
+          const liked = response.data.liked
+          const likeButton = document.querySelector(`#like-button-${movieId}`)
+          const count = response.data.count
+          likeButton.classList.toggle('btn-primary')
+          likeButton.classList.toggle('btn-secondary')
+
+          if (liked === true) {
+            likeButton.innerText = '찜 목록에서 삭제'
+          } else {
+            likeButton.innerText = '찜 목록에 추가'
+          }
+        })
+    })
+  })
+  {% comment %} const forms = document.querySelectorAll('.comment-form')
+  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+  // console.log(csrftoken)
+  // for..of / forEach 여러 forms를 반복을 돌면서 axios를 요청할 수 있도록 함
+  forms.forEach(form => {
+    form.addEventListener('submit', function (event) {
+      event.preventDefault()
+      console.log(event.target.dataset.movieId)
+      const movieId = event.target.dataset.movieId
+
+      axios({
+        method: 'post',
+        url: `http://127.0.0.1:8000/movies/${movieId}/comments/`,
+        headers: {'X-CSRFToken': csrftoken},
+      })
+        .then(response => {
+          console.log(response.data)
+          const comment_submit = document.querySelector(`#comment-submit-${movieId}`)
+
+        })
+    })
+  }) {% endcomment %}
+
+</script>
