--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <title>Document</title>
+  {% comment %} <style>
+  *{
+    background-color: brown;
+  }
+  </style> {% endcomment %}
 </head>
 <body>
   <div class="container">
@@ -14,19 +19,19 @@
       <a href="{% url 'accounts:profile' user %}" type='btn' class='btn btn-light d-inline' >내 프로필<a>
       <form action="{% url 'accounts:logout' %}" method="POST" class='d-inline'>
         {% csrf_token %}
-        <input type="submit" value="Logout" class='btn btn-warning'>
+        <input type="submit" value="로그아웃" class='btn btn-warning'>
       </form>
       <p></p>
-      <a href="{% url 'movies:index'%}" type='btn' class='btn btn-dark'>Movie</a>
-      <a href="{% url 'community:index'%}" type='btn' class='btn btn-dark'>Community</a>
-      <a href="{% url 'community:create'%}" type='btn' class='btn btn-dark'>New Review</a>
-      <a href="{% url 'movies:recommended'%}" type='btn' class='btn btn-dark'>Recommend</a>
-      <a href="{% url 'movies:recoreco'%}" type='btn' class='btn btn-dark'>Recommend2</a>
+      <a href="{% url 'movies:index'%}" type='btn' class='btn btn-dark'>영화목록</a>
+      <a href="{% url 'community:index'%}" type='btn' class='btn btn-dark'>커뮤니티</a>
+      <a href="{% url 'community:create'%}" type='btn' class='btn btn-dark'>글쓰기</a>
+      <a href="{% url 'movies:recommended'%}" type='btn' class='btn btn-dark'>랜덤추천</a>
+      <a href="{% url 'movies:recoreco'%}" type='btn' class='btn btn-dark'>장르추천</a>
 
       {% else %}
       <p></p>
-      <a href="{% url 'accounts:signup' %}" type='btn' class='btn btn-dark'>Signup</a>
-      <a href="{% url 'accounts:login' %}" type='btn' class='btn btn-dark'>Login</a>
+      <a href="{% url 'accounts:signup' %}" type='btn' class='btn btn-dark'>가입</a>
+      <a href="{% url 'accounts:login' %}" type='btn' class='btn btn-dark'>로그인</a>
       {% endif %}
     </nav>
     <br>
