--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -20,15 +20,72 @@
     {% endif %}
   {% endwith %}
   <br>
+{% comment %} {{url_key|length}} {% endcomment %}
+
+
+
+
+
+  <h3>{{ person.username}} 님의 찜목록 기반 추천영화</h3>
+  {% comment %} <p>  {{result}}</p> {% endcomment %}
+  {% if url_key|length%}
+ <div class="card" style="width: 18rem;">
+  <img src="https://image.tmdb.org/t/p/original/{{result.poster_path}}" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{result.title}}</h5>
+    <p class="card-text">{{result.overview|slice:":50"}}</p>
+    <a href="{% url 'movies:detail2' result.id %}" class="btn btn-secondary">상세페이지로...</a>
+  </div>
+</div>
+{% else %}
+찜 목록이 없어서 추천할 수 없어용
+{% endif %}
+   
+   
+
+
+ 
+
 
   <h3>{{ person.username }}가 찜한 영화</h3>
-  {% for movie in person.like_movies.all %}
+    {% if url_key|length%}
+    {% for movie in person.like_movies.all %}
     <li>
       <div class='fs-5 d-inline'>{{ movie.title }}</div>
+              {% comment %} {{movie.genres.all}}  {% endcomment %}
+
+      {% comment %} {{movie.genres}} {% endcomment %}
       <a href="{% url 'movies:detail' movie.pk %}" type='btn' class='btn btn-light d-inline'>detail</a>    
     </li>
   {% endfor %}
   <br>
+{% else %}
+찜 목록이 없어용
+{% endif %}
+  
+    
+ 
+  
+  {% comment %} {{url_key}}
+  {{cnt}}
+  {{num2}}
+  {{genre_list}}
+  {{genre}}
+  {{genre3}} {% endcomment %}
+  {% comment %} {{num}}
+{{genre}}
+  {{genre2.name}} {% endcomment %}
+  {% comment %} {{person}} {% endcomment %}
+  {% comment %} {{movie_list}} {% endcomment %}
+
+  {% comment %} {% for movie in movie_list%}
+    {{movie.id}}
+    {{movie.genres.all}}
+    {{genre}}
+  {% endfor%} {% endcomment %}
+
+
+  
 
   <h3>{{ person.username }}'s 게시글</h3>
   <ul>
