--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -70,7 +70,7 @@
 
 
 <script>
-  // 좋아요 기능
+  // 찜하기 기능
   const forms = document.querySelectorAll('.like-form')
   const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
 
