--- a/movies/templates/movies/recoreco.html
+++ b/movies/templates/movies/recoreco.html
@@ -94,12 +94,13 @@
       
     </section>
     <!-- Section: Form -->
-
-<div class="row row-cols-1 row-cols-md-5 g-4">
+<div class="container">
+<div class="row">
   
   {% comment %}  {% endcomment %}
+  <!--노가다로 외부 html삽입해서뭐..만들어도 될거같긴함 19개밖에 안되니깐 심혈을 기울이기 -->
   {% for key,val in genre.items %}
-  <div class="col-2">
+  <div class="col-1 ">
     <div class="card movie">
       <img
         src="{% get_static_prefix %}images/{{val}}.jpg"
@@ -109,7 +110,7 @@
       />
       <div class="card-body" >
       
-        <h5 class="card-title text-center">{{ key }}</h5>
+        <p class="card-title text-center">{{ key }}</p>
       </div>
     </div>
   </div>
@@ -119,7 +120,7 @@
   {% endfor %}
 
 </div>
-
+</div>
 
  {% comment %} <form action="{% url 'movies:result' %}" method="GET">    
 
