--- a/templates/base.html
+++ b/templates/base.html
@@ -220,5 +220,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+<script>
+  const mouseOver = document.querySelector('#navbarDropdownMenuLink')
+  const button = document.querySelector('#navbarDropdownMenuLink')
+  const mouseLeaves = document.querySelectorAll('.dropdown-menu')
+  mouseOver.addEventListener('mouseenter',function(event){
+    button.click()
+    })
+  //mouseOver.addEventListener('mouseleave',function(event){
+  //  button.click()
+  //})
+  
+  mouseLeaves.forEach(mouseLeave=>{
+    mouseLeave.addEventListener('mouseleave',function(event){
+    button.click()
+  })
+  })
+
+  
+
+    //mouse over가아니라 mouseenter로 바꾼거 기록하기 ㅇㅇ
+  </script>
   </body>
 </html>
