--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     {% if user.is_authenticated %}
 <a class="navbar-brand" href="{% url 'movies:index'%}">영화목록 /</a>
 <a class="navbar-brand" href="{% url 'community:index'%}">커뮤니티 /</a>
-<a class="navbar-brand" href="{% url 'community:create'%}">글쓰기 /</a>
+{% comment %} <a class="navbar-brand" href="{% url 'community:create'%}">글쓰기 /</a> {% endcomment %}
 <a class="navbar-brand" href="{% url 'movies:recommended'%}">랜덤추천 /</a>
 <a class="navbar-brand" href="{% url 'movies:recoreco'%}">장르추천</a>
 <ul class="navbar-nav ms-auto">
