--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% comment %} {{person}} {% endcomment %}
   <h1>{{ person.username }}의 프로필 페이지</h1>
   {% comment %} {% with followings=person.followings.all followers=person.followers.all %}
     <div id="follow-count">
@@ -131,7 +132,6 @@
     <div>{{ comment.content }}</div>
   {% endfor %}
   <hr> {% endcomment %}
-  
 {% endblock content %}
 
 {% block script %}
