--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>회원가입</h1>
+
+ 
 <form action="" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit">
+  <input type="submit" id="button" class="btn btn-outline-light mb-4">
 </form>
+
+
+
+
 {% endblock  %}
