--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -1,9 +1,23 @@
 {% extends 'base.html' %}
-
 {% block content %}
+
+{% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> {% endcomment %}
+
+
+{% comment %} {{person}}
+{{person.username}} {% endcomment %}
+{% comment %} {{user.username}}
+{{username}}
+{{username.username}} {% endcomment %}
+{% comment %} {{person}} {% endcomment %}
 <br>
   {% comment %} <h1 class='fw-bold'>Movies List</h1> {% endcomment %}
   <br>
+  
+  
+       {% comment %} <p id="like-count-{{person.pk}}">{{person.like_movies.all|length}}</p> {% endcomment %}
+       {% comment %} <p id="save-list">{{person.like_movies.all|length}}</p> {% endcomment %}
+  
 
 
 
@@ -85,19 +99,24 @@
               <button id="like-button-{{ movie_list.pk }}" class='btn btn-outline-light mb-4'>찜 목록에 추가</button>
             {% endif %}
         </form> 
+
+
+
+        
       </div>
     </div>
   </div>
 </div>
 {% comment %}  {% endcomment %}
      
-    <p class="card-text">
+    {% comment %} <p class="card-text">
     {% if movie_list.overview|length%}
     {{ movie_list.overview|slice:":50"}}....
     {% else %}
     줄거리가 제공되지 않는 영화입니다
     {% endif %}
-    </p>
+    </p> {% endcomment %}
+
     {% comment %} 슬라이씽 {% endcomment %}
   </div>
 </div>
@@ -138,7 +157,42 @@
     {% endfor %}
   </div>  {% endcomment %}
 
+ <button type="button" class="btn btn-primary d-none " id="liveToastBtn">찜한 영화목록</button>
+
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+  <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      {% comment %} <img src="..." class="rounded me-2" alt="..."> {% endcomment %}
+      <strong class="me-auto">찜한 영화목록</strong>
+      <small>{{ person.like_movies.all|length}}가지</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      <ul>
+{% if person.like_movies.all|length%}
+{% for movie in person.like_movies.all %}
+  <li>{{movie}}</li>
+{% endfor %}
+{% else %}
+<li>찜목록이 없어용</li>
+{% endif %}
+</ul>
+    </div>
+  </div>
+</div> 
+
 <script>
+var toastTrigger = document.getElementById('liveToastBtn')
+var toastLiveExample = document.getElementById('liveToast')
+if (toastTrigger) {
+  toastTrigger.addEventListener('click', function () {
+    var toast = new bootstrap.Toast(toastLiveExample)
+
+    toast.show()
+  })
+}
+const liveToastBtn = document.querySelector('#liveToastBtn')
+const saves = document.querySelectorAll('.like-form .btn')
 const forms = document.querySelectorAll('.like-form')
 const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
 const modalButtons = document.querySelectorAll('.d-none')
@@ -160,10 +214,20 @@ modalEnters.forEach(function(element,index){
     
     element.addEventListener('click',function(){
     console.log(index)
-    
     modalButtons[index].click()// 오...미친 이 사용법이 되네연?
     })
 })
+
+window.onload=function(){
+      liveToastBtn.click()
+
+}
+
+{% comment %} saves.forEach(save=>{
+  save.addEventListener('click',function(event){
+    liveToastBtn.click()
+    //console.log(event.target.innerText)
+  })}) {% endcomment %}
 
 
 {% comment %} modalEnters.forEach(modalEnter=>{
@@ -215,6 +279,7 @@ console.log('hihi')
    forms.forEach(form => {
     form.addEventListener('submit', function (event) {
       event.preventDefault()
+      // 찜목록 추가버튼 눌르면 이거발생
       // console.log(event.target.dataset.movieId)
       const movieId = event.target.dataset.movieId
 
@@ -227,8 +292,9 @@ console.log('hihi')
           console.log(response.data)
           const liked = response.data.liked
           const likeButton = document.querySelector(`#like-button-${movieId}`)
-          // const likeCount = document.querySelector(`#like-count-${movieId}`)
+          const likeCount = document.querySelector(`#like-count-${movieId}`)
           const count = response.data.count
+          console.log(count)
           likeButton.classList.toggle('btn-secondary')
           likeButton.classList.toggle('btn-secondary')
 
@@ -238,10 +304,15 @@ console.log('hihi')
             likeButton.innerText = '찜 목록에 추가'
           }
 
-          // likeCount.innerText = count
+         // likeCount.innerText = count
         })
     })
   }) 
+
+
+  
+
+  
 </script>
 
   
@@ -278,6 +349,7 @@ console.log('hihi')
   // for..of / forEach 여러 forms를 반복을 돌면서 axios를 요청할 수 있도록 함
    forms.forEach(form => {
     form.addEventListener('submit', function (event) {
+      
       event.preventDefault()
       // console.log(event.target.dataset.movieId)
       const movieId = event.target.dataset.movieId
