--- a/movies/templates/movies/recoreco.html
+++ b/movies/templates/movies/recoreco.html
@@ -3,6 +3,12 @@
 {% load static %}
 {% block content %}
 
+<style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+</style>
+
+
 
 
 <br><br>
@@ -101,7 +107,7 @@
   {% comment %}  {% endcomment %}
   <!--노가다로 외부 html삽입해서뭐..만들어도 될거같긴함 19개밖에 안되니깐 심혈을 기울이기 -->
   {% for key,val in genre.items %}
-  <div class="col-1 ">
+  <div class="col-1 g-2">
     <div class="card movie">
 
 <div
