--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,11 @@
     <!-- Regular MDB theme -->
     {% comment %} <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}" /> {% endcomment %}
     {% comment %} <link rel="stylesheet" href="css/mdb.min.css" /> {% endcomment %}
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> {% endcomment %}
 
   </head>
-  <body>
+  <body >
+  <!-- 여기 인라인으로 강제로 주자 ㅇㅇ 오프캔버스위해서....-->
     <!-- Start your project here-->
 <div class="container ">
 
